--- a/styles/styles.css
+++ b/styles/styles.css
@@ -140,6 +140,12 @@ form.search {
     }
 }
 
+@media (max-width: 500px) {
+    .spread-elements {
+        flex-direction: column;
+    }
+}
+
 label {
     font-weight: 600;
     display: block;
@@ -174,15 +180,6 @@ select:focus {
     cursor: pointer;
     transition: transform .15s ease, background-color .15s ease, color .15s ease, box-shadow .12s ease;
 }
-
-/*button.btn-search {
-    background: var(--color-sun);
-}*/
-
-/*button.btn-search:hover,
-button.btn-search:hover {
-    background: var(--color-sky);
-}*/
 
 .btn:hover,
 .btn:focus-visible {
@@ -285,10 +282,6 @@ footer a:focus-visible {
     color: #444;
 }
 
-.hero {
-    /*overflow: hidden;*/
-}
-
 .hero img {
     display: block;
     width: 100%;
@@ -298,10 +291,12 @@ footer a:focus-visible {
     object-position: center bottom;
 }
 
-/*.hero {
-    height: 40vh;
-    background-image: url("./assets/images/hero.jpg");
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: auto 200%;
-  }*/
+.spread-elements {
+    display: flex;
+    justify-content: space-between;
+}
+
+#recipe-hero-img {
+    height: auto;
+    max-height: 400px;
+}
